@@ -1,45 +1,54 @@
 package com.hermesworld.ais.galapagos.uisupport.controller;
 
-import java.util.Collections;
-
-import org.junit.Test;
-
 import com.hermesworld.ais.galapagos.uisupport.controller.CustomLinkConfig;
+
+import static org.junit.jupiter.api.Assertions.assertThrows;
 import com.hermesworld.ais.galapagos.uisupport.controller.CustomLinksConfig;
 import com.hermesworld.ais.galapagos.uisupport.controller.LinkType;
+import org.junit.jupiter.api.Test;
 
-public class CustomLinksConfigTest {
+import java.util.List;
 
-    @Test(expected = RuntimeException.class)
-    public void testCustomLinksConfigID() {
-        CustomLinkConfig customLinkConfig = generatedCustomLinkConfig(null, "www.test.de", "Test-Label",
-                LinkType.OTHER);
-        new CustomLinksConfig().setLinks(Collections.singletonList(customLinkConfig));
-    }
+class CustomLinksConfigTest {
 
-    @Test(expected = RuntimeException.class)
-    public void testCustomLinksConfigH_Ref() {
-        CustomLinkConfig customLinkConfig = generatedCustomLinkConfig("42", null, "Test-Label", LinkType.OTHER);
-        new CustomLinksConfig().setLinks(Collections.singletonList(customLinkConfig));
-    }
-
-    @Test(expected = RuntimeException.class)
-    public void testCustomLinksConfigLabel() {
-        CustomLinkConfig customLinkConfig = generatedCustomLinkConfig("42", "www.test.de", null, LinkType.OTHER);
-        new CustomLinksConfig().setLinks(Collections.singletonList(customLinkConfig));
-    }
-
-    @Test(expected = RuntimeException.class)
-    public void testCustomLinksConfigLinkType() {
-        CustomLinkConfig customLinkConfig = generatedCustomLinkConfig("42", "www.test.de", "Test-Label", null);
-        new CustomLinksConfig().setLinks(Collections.singletonList(customLinkConfig));
+    @Test
+    void testCustomLinksConfigID() {
+        assertThrows(RuntimeException.class, () -> {
+            CustomLinkConfig customLinkConfig = generatedCustomLinkConfig(null, "www.test.de", "Test-Label",
+                    LinkType.OTHER);
+            new CustomLinksConfig().setLinks(List.of(customLinkConfig));
+        });
     }
 
     @Test
-    public void testCustomLinkConfigPositive() {
+    void testCustomLinksConfigH_Ref() {
+        assertThrows(RuntimeException.class, () -> {
+            CustomLinkConfig customLinkConfig = generatedCustomLinkConfig("42", null, "Test-Label", LinkType.OTHER);
+            new CustomLinksConfig().setLinks(List.of(customLinkConfig));
+        });
+    }
+
+    @Test
+    void testCustomLinksConfigLabel() {
+        assertThrows(RuntimeException.class, () -> {
+            CustomLinkConfig customLinkConfig = generatedCustomLinkConfig("42", "www.test.de", null, LinkType.OTHER);
+            new CustomLinksConfig().setLinks(List.of(customLinkConfig));
+        });
+    }
+
+    @Test
+    void testCustomLinksConfigLinkType() {
+        assertThrows(RuntimeException.class, () -> {
+            CustomLinkConfig customLinkConfig = generatedCustomLinkConfig("42", "www.test.de", "Test-Label", null);
+            new CustomLinksConfig().setLinks(List.of(customLinkConfig));
+        });
+    }
+
+    @Test
+    void testCustomLinkConfigPositive() {
         CustomLinkConfig customLinkConfig = generatedCustomLinkConfig("42", "www.test.de", "Test-Label",
                 LinkType.OTHER);
-        new CustomLinksConfig().setLinks(Collections.singletonList(customLinkConfig));
+        new CustomLinksConfig().setLinks(List.of(customLinkConfig));
     }
 
     private CustomLinkConfig generatedCustomLinkConfig(String id, String href, String label, LinkType linkType) {
